EandT/main/default/objects/Class__c/Class__c.object-meta.xml
<CustomObject>
    <description>This is where you define the classes that you will give.  It include information like location, max number of attendees (You can exceed this but should be warned) the usual frequency (used for scheduling future classes) and if it runs on public holidays (used in scheduling)</description>
    <label>Class</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>