EandT/main/default/objects/Class__c/fields/Casual_Price__c.field-meta.xml
<CustomField>
    <fullName>Casual_Price__c</fullName>
    <inlineHelpText>Enter the normal price for an attendee who "pays as they go"</inlineHelpText>
    <label>Casual Price</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>