EandT/main/default/objects/Class__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Type</label>
    <referenceTo>Class_Type__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>