EandT/main/default/objects/Class__c/fields/Concession_Price__c.field-meta.xml
<CustomField>
    <fullName>Concession_Price__c</fullName>
    <inlineHelpText>The price for this class when a concession (pre-pay) card is used to pay for it.  It defaults to a 10% discount from the casual price</inlineHelpText>
    <label>Concession Price</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>