EandT/main/default/objects/Class__c/fields/Do_not_expose_to_Community__c.field-meta.xml
<CustomField>
    <fullName>Do_not_expose_to_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, then: Anonymous users will not see the class listed on the Community and authenticated users will only see it on the community if they have ever had a booking of any status for that Class</inlineHelpText>
    <label>Do not expose to Community</label>
    <type>Checkbox</type>
</CustomField>