EandT/main/default/objects/Class__c/fields/Invoice_3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>Invoice_3rd_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if this class is being done on behalf of a third party</description>
    <inlineHelpText>If this class is being done on behalf of a third party and you are invoicing the third party.  If this box is checked, students can't book in the class through the community / student portal.</inlineHelpText>
    <label>Invoice 3rd Party</label>
    <type>Checkbox</type>
</CustomField>