EandT/main/default/objects/Class__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Captain's Retreat</fullName>
            </value>
            <value>
                <fullName>Pt Chev Tennis Club</fullName>
            </value>
            <value>
                <fullName>Mt Albert Bowling Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>