EandT/main/default/objects/Class__c/fields/Location_Copy__c.field-meta.xml
<CustomField>
    <fullName>Location_Copy__c</fullName>
    <description>Read-only field used to copy the value of the location picklist so it can be displayed on the child Class Attendace records.  Populated by a workflow rule</description>
    <label>Location Copy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>