EandT/main/default/objects/Class__c/fields/Max_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Max_Attendees__c</fullName>
    <inlineHelpText>Max size of class. Internal users can exceed this. Portal users can't add bookings if the current number of bookings >= Max_Attendees, but can waitlist.Changing this value updates future scheduled classes and causes an error if value &lt; students registered</inlineHelpText>
    <label>Max Attendees</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>