EandT/main/default/objects/Class__c/fields/On_Account_Price__c.field-meta.xml
<CustomField>
    <fullName>On_Account_Price__c</fullName>
    <inlineHelpText>The price charged if this Class is paid for in arrears</inlineHelpText>
    <label>On Account Price</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>