EandT/main/default/objects/Class__c/fields/Session_Count__c.field-meta.xml
<CustomField>
    <fullName>Session_Count__c</fullName>
    <inlineHelpText>The number of Concession Card session that it costs to attend this class</inlineHelpText>
    <label>Session Count</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>